[gd_scene load_steps=8 format=3 uid="uid://bl6plkfx1aq1f"]

[ext_resource type="Script" path="res://scripts/UI/defeat.gd" id="1_cewkp"]
[ext_resource type="FontFile" uid="uid://b0trcqqmj3o8" path="res://assets/fonts/PurevilRegular-6RaD6.ttf" id="2_y1tpk"]
[ext_resource type="Texture2D" uid="uid://mq4psnlum8dl" path="res://assets/sprites/customer.png" id="3_46c0x"]

[sub_resource type="CanvasTexture" id="CanvasTexture_tnvln"]

[sub_resource type="LabelSettings" id="LabelSettings_74ffo"]
line_spacing = 4.0
font = ExtResource("2_y1tpk")
font_size = 60
outline_size = 1
shadow_size = 0
shadow_color = Color(0.869703, 0.87299, 0.929155, 0)

[sub_resource type="CanvasTexture" id="CanvasTexture_2tte1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hdo13"]
texture = SubResource("CanvasTexture_2tte1")
expand_margin_left = 48.0
expand_margin_top = 8.0
expand_margin_right = 48.0
expand_margin_bottom = 8.0
modulate_color = Color(0.306923, 0.306923, 0.306923, 1)

[node name="Defeat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cewkp")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_tnvln")

[node name="Defeat" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -227.0
offset_right = 141.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="TextureRect/Defeat"]
layout_mode = 2
text = "DEFEAT!"
label_settings = SubResource("LabelSettings_74ffo")
horizontal_alignment = 1
visible_characters_behavior = 1

[node name="ResetButton" type="Button" parent="TextureRect/Defeat"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_y1tpk")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxTexture_hdo13")
text = "Reset"

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/Defeat"]
position = Vector2(158, -152)
texture = ExtResource("3_46c0x")

[connection signal="button_down" from="TextureRect/Defeat/ResetButton" to="." method="_on_reset_button_button_down"]
